Fix spacing around "Contact us" button
Fix spacing around the right side of the "Contact us" button since there was too much padding.

--- a/_sass/minimal-mistakes/_buttons.scss
+++ b/_sass/minimal-mistakes/_buttons.scss
@@ -12,7 +12,7 @@
   /* margin-bottom: 0.25em;/* Commented out to remove underline when hovering over buttons (modified by josh-wong) */
   padding: 0.75em 1.5em; /* Originally `0.5em 1em;` (modified by josh-wong) */
   font-family: $sans-serif;
-  font-size: $type-size-contact-button; /* Originally `$type-size-6;` (modified by josh-wong) */
+  font-size: $type-size-5-5; /* Originally `$type-size-6;` (modified by josh-wong) */
   font-weight: 500; /* Originally `bold;` (modified by josh-wong) */
   text-align: center;
   text-decoration: none;
