--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -44,9 +44,6 @@ $type-size-6: 0.75em !default; // ~12px
 $type-size-7: 0.6875em !default; // ~11px
 $type-size-8: 0.625em !default; // ~10px
 
-/* Scalar type scale (added by josh-wong) */
-$type-size-contact-button: 0.9em !default; /* For the contact button in the header navigation used in `masthead.html` (added by josh-wong) */
-
 /* headline scale */
 $h-size-1: 1.563em !default; // ~25.008px
 $h-size-2: 1.25em !default; // ~20px
